# AMUZA-Local-Code

./: .gitignore  AMUZA_Master.py  CHANGELOG.md  ERROR.md  Flow_Rates_Exp1.txt  Flow_Rates_Exp2.txt  LICENSE  README.md  SIX_SERVER_READER.py  Sampling_Collector.py  Sampling_Collector_Final.py  Sampling_Collector_Final_2.py  Sampling_Collector_Final_Noah_Changes.py  Sampling_Collector_Final_Shaun_Changes.py  Sampling_Collector_V2.2.py  Sampling_Collector_V2.3.py  Sampling_Collector_V3.1.py  out_data.txt  pyproject.toml
Recorded_Files/: Sensor_readings_new.txt  nope  ok
Sensor_Readings/: Sensor_readings_01_12_24_15_55.txt  Sensor_readings_01_12_24_15_57.txt  Sensor_readings_01_12_24_16_09.txt  Sensor_readings_02_12_24_17_10.txt  Sensor_readings_02_12_24_17_15.txt  Sensor_readings_02_12_24_17_18.txt  Sensor_readings_02_12_24_17_19.txt  Sensor_readings_04_12_24_12_49.txt  Sensor_readings_04_12_24_12_54.txt  Sensor_readings_04_12_24_12_57.txt  Sensor_readings_04_12_24_13_45.txt  Sensor_readings_04_12_24_14_39.txt  Sensor_readings_04_12_24_14_50.txt  Sensor_readings_05_12_24_16_10.txt  Sensor_readings_05_12_24_17_32.txt  Sensor_readings_14_11_24_14_23.txt  Sensor_readings_14_11_24_14_32.txt  Sensor_readings_14_11_24_15_12.txt  Sensor_readings_14_11_24_15_42.txt  Sensor_readings_14_11_24_15_56.txt  Sensor_readings_14_11_24_16_07.txt  Sensor_readings_14_11_24_16_13.txt  Sensor_readings_17_11_24_09_17.txt  Sensor_readings_17_11_24_09_34.txt  Sensor_readings_17_11_24_09_39.txt  Sensor_readings_17_11_24_12_42.txt  Sensor_readings_17_11_24_12_56.txt  Sensor_readings_17_11_24_17_27.txt  Sensor_readings_17_11_24_18_42.txt  (+21 more)
